@@ -57,7 +57,7 @@ function table_row($row=NULL) {
         $html .= "<td>" . $row['year_or_bau'] . "</td>";
         $html .= "<td>" . ($row['rel_to_year'] ? $row['rel_to_year'] : "") . "</td>";
         $html .= "<td>" . '' . "</td>";
-        $test = floatval($row['target_Mt_CO2']) + floatval($row['target_Mt_nonCO2']) + floatval($row['target_Mt_LULUCF']);
+        $test = floatval($row['target_Mt_CO2']) * floatval($row['target_Mt_nonCO2']) * floatval($row['target_Mt_LULUCF']);
         $html .= "<td>" . (($test >0) ? remove_trailing_zeros($row['target_Mt_CO2']) : '') . "</td>";
         $html .= "<td>" . (($test >0) ? remove_trailing_zeros($row['target_Mt_nonCO2']) : '') . "</td>";
         $html .= "<td>" . (($test >0) ? remove_trailing_zeros($row['target_Mt_LULUCF']) : '') . "</td>";
